Add theme storage feature using localStorage

--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -4,6 +4,8 @@
     display: block;
     margin-right:auto;
     margin-left:auto;
+    border: 4px solid;
+    /* border-style:dotted; */
 }
 /*=============================================================================================================*/
 .logo {
@@ -13,6 +15,7 @@
 
 .myButton {
     height: 30px;
+    background-color: aqua;
 }
 /*=============================================================================================================*/
 
@@ -23,7 +26,7 @@
 .myContainer {
     margin: 10px;
     /* width: 90%; */
-    background-color: rgb(80, 76, 76);
+    background-color: rgb(107, 97, 97);
     /* color: white; */
 }
 /*=============================================================================================================*/
@@ -111,3 +114,80 @@
 #main-footer h4 {
     color: orange;
 }
+/* =========================================================================================================== */
+.theme-switch {
+    /* block-size: auto; */
+    /* width: 80%; */
+    /* align-items: center; */
+    height: 50px;
+    font-size: large;
+    border-radius: 5px;
+}
+/* =========================================================================================================== */
+#themeDivider {
+    background-color: rgb(80, 76, 76);
+}
+/* =========================================================================================================== */
+body.dark-theme {
+    /* background-color: rgb(142, 0, 47); */
+    color:rgb(80, 76, 76);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    word-spacing: 4px;
+    line-height: 1.4em;
+
+}
+
+body.dark-theme #topDiv {
+    background-color: orange;
+    margin:0;
+    padding:0;
+    /* font-weight: 200; */
+}
+/* =========================================================================================================== */
+body {
+    background-color: #f4f4f4;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* =========================================================================================================== */
+
+body.dark-theme #main-header {
+  /* your styles here */
+    height: 75px;
+    background-color: orange;
+    color: black;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+body.dark-theme h1 {
+  color: black;
+}
+/* =========================================================================================================== */
+body.dark-theme#myContainer {
+    background-color: orange;
+    color: rgb(80, 76, 76);
+}
+
+body.dark-theme div {
+    background-color: rgb(142, 0, 47);
+    color: rgb(80, 76, 76);
+}
+
+
+/* =========================================================================================================== */
+#backToTopBtn {
+    background-color: aqua;
+}
+
+/* =========================================================================================================== */
+
+/* =========================================================================================================== */
+
+/* =========================================================================================================== */
+
+/* =========================================================================================================== */
