--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -41,7 +41,7 @@
 }
 
 #main-header h1 {
-    margin-top:10px;
+    margin-top:0;
     padding: 5px;
 }
 /*=============================================================================================================*/
@@ -126,6 +126,7 @@
 /* =========================================================================================================== */
 #themeDivider {
     background-color: rgb(80, 76, 76);
+    margin-bottom: 0;
 }
 /* =========================================================================================================== */
 body.dark-theme {
@@ -136,6 +137,10 @@ body.dark-theme {
     word-spacing: 4px;
     line-height: 1.4em;
 
+}
+
+#topDiv {
+    margin-top: 0px;
 }
 
 body.dark-theme #topDiv {
